cppCheckReport.txt
ToleranceCheck.cpp:54:32: performance: Function parameter 'password' should be passed by const reference. [passedByValue]
void manipulatePassword(string password, int toleranceLevel, vector<string> &result)
                               ^
ToleranceCheck.cpp:60:27: performance: Function parameter 'newPassword' should be passed by const reference. [passedByValue]
int checkTolerance(string newPassword, string oldPassword, int toleranceOfSimilarity)
                          ^
ToleranceCheck.cpp:60:47: performance: Function parameter 'oldPassword' should be passed by const reference. [passedByValue]
int checkTolerance(string newPassword, string oldPassword, int toleranceOfSimilarity)
                                              ^
ToleranceCheck.cpp:96:48: error: When i==result.size(), result[i] is out of bounds. [stlOutOfBounds]
   cerr << "Manipulated password is:" << result[i] << endl;
                                               ^
ToleranceCheck.cpp:97:25: error: When i==result.size(), result[i] is out of bounds. [stlOutOfBounds]
   if(isDuplicate(result[i], fpIn))
                        ^
ToleranceCheckDatabase.cpp:57:14: warning: Either the condition 'fpOut==NULL' is redundant or there is possible null pointer dereference: fpOut. [nullPointerRedundantCheck]
 fputs("\n", fpOut);
             ^
ToleranceCheckDatabase.cpp:47:10: note: Assuming that condition 'fpOut==NULL' is not redundant
 if(fpOut==NULL)
         ^
ToleranceCheckDatabase.cpp:46:15: note: Assignment 'fpOut=fopen("passwords.txt","a")', assigned value is 0
 fpOut = fopen("passwords.txt", "a");
              ^
ToleranceCheckDatabase.cpp:57:14: note: Null pointer dereference
 fputs("\n", fpOut);
             ^
ToleranceCheckDatabase.cpp:58:28: warning: Either the condition 'fpOut==NULL' is redundant or there is possible null pointer dereference: fpOut. [nullPointerRedundantCheck]
 fputs(hashResult.c_str(), fpOut);
                           ^
ToleranceCheckDatabase.cpp:47:10: note: Assuming that condition 'fpOut==NULL' is not redundant
 if(fpOut==NULL)
         ^
ToleranceCheckDatabase.cpp:46:15: note: Assignment 'fpOut=fopen("passwords.txt","a")', assigned value is 0
 fpOut = fopen("passwords.txt", "a");
              ^
ToleranceCheckDatabase.cpp:58:28: note: Null pointer dereference
 fputs(hashResult.c_str(), fpOut);
                           ^
ToleranceCheckDatabase.cpp:59:9: warning: Either the condition 'fpOut==NULL' is redundant or there is possible null pointer dereference: fpOut. [nullPointerRedundantCheck]
 fclose(fpOut);
        ^
ToleranceCheckDatabase.cpp:47:10: note: Assuming that condition 'fpOut==NULL' is not redundant
 if(fpOut==NULL)
         ^
ToleranceCheckDatabase.cpp:46:15: note: Assignment 'fpOut=fopen("passwords.txt","a")', assigned value is 0
 fpOut = fopen("passwords.txt", "a");
              ^
ToleranceCheckDatabase.cpp:59:9: note: Null pointer dereference
 fclose(fpOut);
        ^
ToleranceCheckDatabase.cpp:9:25: performance: Function parameter 'newPassword' should be passed by const reference. [passedByValue]
bool isDuplicate(string newPassword, FILE * fpIn)
                        ^
ToleranceCheckDatabase.cpp:40:27: performance: Function parameter 'newPassword' should be passed by const reference. [passedByValue]
void storePassword(string newPassword)
                          ^
ToleranceCheckHash.cpp:27:7: style: The scope of the variable 'buffer' can be reduced. [variableScope]
 char buffer[max_buffer];
      ^
ToleranceCheckHash.cpp:43:26: performance: Function parameter 'password' should be passed by const reference. [passedByValue]
string hashSHA256(string password)
                         ^
main.cpp:11:27: performance: Function parameter 'oldPassword' should be passed by const reference. [passedByValue]
bool checkPassword(string oldPassword, string newPassword, string confirmNewPassword)
                          ^
main.cpp:11:47: performance: Function parameter 'newPassword' should be passed by const reference. [passedByValue]
bool checkPassword(string oldPassword, string newPassword, string confirmNewPassword)
                                              ^
main.cpp:11:67: performance: Function parameter 'confirmNewPassword' should be passed by const reference. [passedByValue]
bool checkPassword(string oldPassword, string newPassword, string confirmNewPassword)
                                                                  ^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingIncludeSystem]

